lab3/y.output
State 1 conflicts: 2 shift/reduce
State 29 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 85 conflicts: 12 shift/reduce
State 93 conflicts: 13 shift/reduce
State 94 conflicts: 12 shift/reduce
State 118 conflicts: 12 shift/reduce
State 119 conflicts: 12 shift/reduce
State 135 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: LPAREN seqexp RPAREN
    3    | LET decs IN seqexp END
    4    | lvalue ASSIGN exp
    5    | IF exp THEN exp
    6    | IF exp THEN exp ELSE exp
    7    | WHILE exp DO exp
    8    | FOR ID ASSIGN exp TO exp DO exp
    9    | BREAK
   10    | lvalue
   11    | NIL
   12    | INT
   13    | STRING
   14    | MINUS exp
   15    | ID LPAREN args RPAREN
   16    | exp PLUS exp
   17    | exp MINUS exp
   18    | exp TIMES exp
   19    | exp DIVIDE exp
   20    | exp EQ exp
   21    | exp NEQ exp
   22    | exp LT exp
   23    | exp GT exp
   24    | exp LE exp
   25    | exp GE exp
   26    | exp AND exp
   27    | exp OR exp
   28    | ID LBRACE recorditems RBRACE
   29    | ID LBRACK exp RBRACK OF exp

   30 exps: exp
   31     | exp SEMICOLON exps
   32     | %empty

   33 seqexp: exps

   34 recorditem: ID EQ exp

   35 recorditems: recorditem
   36            | recorditem COMMA recorditems
   37            | %empty

   38 args: exp
   39     | exp COMMA args
   40     | %empty

   41 tyfield: ID COLON ID

   42 tyfields: tyfield
   43         | tyfield COMMA tyfields
   44         | %empty

   45 ty: ID
   46   | LBRACE tyfields RBRACE
   47   | ARRAY OF ID

   48 tydec: TYPE ID EQ ty

   49 tydecs: tydec
   50       | tydec tydecs

   51 vardec: VAR ID ASSIGN exp
   52       | VAR ID COLON ty ASSIGN exp

   53 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   54       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   55 fundecs: fundec
   56        | fundec fundecs

   57 dec: tydecs
   58    | vardec
   59    | fundecs

   60 decs: dec
   61     | dec decs

   62 lvalue: ID
   63       | ID DOT ID
   64       | lvalue DOT ID
   65       | lvalue LBRACK exp RBRACK


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 8 15 28 29 34 41 45 47 48 51 52 53 54 62 63 64
STRING (259) 13
INT (260) 12
COMMA (261) 36 39 43
COLON (262) 41 52 54
SEMICOLON (263) 31
LPAREN (264) 2 15 53 54
RPAREN (265) 2 15 53 54
LBRACK (266) 29 65
RBRACK (267) 29 65
LBRACE (268) 28 46
RBRACE (269) 28 46
DOT (270) 63 64
PLUS (271) 16
MINUS (272) 14 17
TIMES (273) 18
DIVIDE (274) 19
EQ (275) 20 34 48 53 54
NEQ (276) 21
LT (277) 22
LE (278) 24
GT (279) 23
GE (280) 25
AND (281) 26
OR (282) 27
ASSIGN (283) 4 8 51 52
ARRAY (284) 47
IF (285) 5 6
THEN (286) 5 6
ELSE (287) 6
WHILE (288) 7
FOR (289) 8
TO (290) 8
DO (291) 7 8
LET (292) 3
IN (293) 3
END (294) 3
OF (295) 29 47
BREAK (296) 9
NIL (297) 11
FUNCTION (298) 53 54
VAR (299) 51 52
TYPE (300) 48
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
exp (49)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29, on right: 1 4 5 6 7 8 14 16 17 18 19 20 21
    22 23 24 25 26 27 29 30 31 34 38 39 51 52 53 54 65
exps (50)
    on left: 30 31 32, on right: 31 33
seqexp (51)
    on left: 33, on right: 2 3
recorditem (52)
    on left: 34, on right: 35 36
recorditems (53)
    on left: 35 36 37, on right: 28 36
args (54)
    on left: 38 39 40, on right: 15 39
tyfield (55)
    on left: 41, on right: 42 43
tyfields (56)
    on left: 42 43 44, on right: 43 46 53 54
ty (57)
    on left: 45 46 47, on right: 48 52
tydec (58)
    on left: 48, on right: 49 50
tydecs (59)
    on left: 49 50, on right: 50 57
vardec (60)
    on left: 51 52, on right: 58
fundec (61)
    on left: 53 54, on right: 55 56
fundecs (62)
    on left: 55 56, on right: 56 59
dec (63)
    on left: 57 58 59, on right: 60 61
decs (64)
    on left: 60 61, on right: 3 61
lvalue (65)
    on left: 62 63 64 65, on right: 4 10 64 65


State 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  go to state 12
    exp      go to state 13
    lvalue   go to state 14


State 1

   15 exp: ID . LPAREN args RPAREN
   28    | ID . LBRACE recorditems RBRACE
   29    | ID . LBRACK exp RBRACK OF exp
   62 lvalue: ID .
   63       | ID . DOT ID

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17
    DOT     shift, and go to state 18

    LBRACK    [reduce using rule 62 (lvalue)]
    DOT       [reduce using rule 62 (lvalue)]
    $default  reduce using rule 62 (lvalue)


State 2

   13 exp: STRING .

    $default  reduce using rule 13 (exp)


State 3

   12 exp: INT .

    $default  reduce using rule 12 (exp)


State 4

    2 exp: LPAREN . seqexp RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 32 (exps)

    exp     go to state 19
    exps    go to state 20
    seqexp  go to state 21
    lvalue  go to state 14


State 5

   14 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 22
    lvalue  go to state 14


State 6

    5 exp: IF . exp THEN exp
    6    | IF . exp THEN exp ELSE exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 23
    lvalue  go to state 14


State 7

    7 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 24
    lvalue  go to state 14


State 8

    8 exp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 25


State 9

    3 exp: LET . decs IN seqexp END

    FUNCTION  shift, and go to state 26
    VAR       shift, and go to state 27
    TYPE      shift, and go to state 28

    tydec    go to state 29
    tydecs   go to state 30
    vardec   go to state 31
    fundec   go to state 32
    fundecs  go to state 33
    dec      go to state 34
    decs     go to state 35


State 10

    9 exp: BREAK .

    $default  reduce using rule 9 (exp)


State 11

   11 exp: NIL .

    $default  reduce using rule 11 (exp)


State 12

    0 $accept: program . $end

    $end  shift, and go to state 36


State 13

    1 program: exp .
   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . EQ exp
   21    | exp . NEQ exp
   22    | exp . LT exp
   23    | exp . GT exp
   24    | exp . LE exp
   25    | exp . GE exp
   26    | exp . AND exp
   27    | exp . OR exp

    PLUS    shift, and go to state 37
    MINUS   shift, and go to state 38
    TIMES   shift, and go to state 39
    DIVIDE  shift, and go to state 40
    EQ      shift, and go to state 41
    NEQ     shift, and go to state 42
    LT      shift, and go to state 43
    LE      shift, and go to state 44
    GT      shift, and go to state 45
    GE      shift, and go to state 46
    AND     shift, and go to state 47
    OR      shift, and go to state 48

    $default  reduce using rule 1 (program)


State 14

    4 exp: lvalue . ASSIGN exp
   10    | lvalue .
   64 lvalue: lvalue . DOT ID
   65       | lvalue . LBRACK exp RBRACK

    LBRACK  shift, and go to state 49
    DOT     shift, and go to state 50
    ASSIGN  shift, and go to state 51

    $default  reduce using rule 10 (exp)


State 15

   15 exp: ID LPAREN . args RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 40 (args)

    exp     go to state 52
    args    go to state 53
    lvalue  go to state 14


State 16

   29 exp: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 54
    lvalue  go to state 14


State 17

   28 exp: ID LBRACE . recorditems RBRACE

    ID  shift, and go to state 55

    $default  reduce using rule 37 (recorditems)

    recorditem   go to state 56
    recorditems  go to state 57


State 18

   63 lvalue: ID DOT . ID

    ID  shift, and go to state 58


State 19

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . EQ exp
   21    | exp . NEQ exp
   22    | exp . LT exp
   23    | exp . GT exp
   24    | exp . LE exp
   25    | exp . GE exp
   26    | exp . AND exp
   27    | exp . OR exp
   30 exps: exp .
   31     | exp . SEMICOLON exps

    SEMICOLON  shift, and go to state 59
    PLUS       shift, and go to state 37
    MINUS      shift, and go to state 38
    TIMES      shift, and go to state 39
    DIVIDE     shift, and go to state 40
    EQ         shift, and go to state 41
    NEQ        shift, and go to state 42
    LT         shift, and go to state 43
    LE         shift, and go to state 44
    GT         shift, and go to state 45
    GE         shift, and go to state 46
    AND        shift, and go to state 47
    OR         shift, and go to state 48

    $default  reduce using rule 30 (exps)


State 20

   33 seqexp: exps .

    $default  reduce using rule 33 (seqexp)


State 21

    2 exp: LPAREN seqexp . RPAREN

    RPAREN  shift, and go to state 60


State 22

   14 exp: MINUS exp .
   16    | exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . EQ exp
   21    | exp . NEQ exp
   22    | exp . LT exp
   23    | exp . GT exp
   24    | exp . LE exp
   25    | exp . GE exp
   26    | exp . AND exp
   27    | exp . OR exp

    $default  reduce using rule 14 (exp)


State 23

    5 exp: IF exp . THEN exp
    6    | IF exp . THEN exp ELSE exp
   16    | exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . EQ exp
   21    | exp . NEQ exp
   22    | exp . LT exp
   23    | exp . GT exp
   24    | exp . LE exp
   25    | exp . GE exp
   26    | exp . AND exp
   27    | exp . OR exp

    PLUS    shift, and go to state 37
    MINUS   shift, and go to state 38
    TIMES   shift, and go to state 39
    DIVIDE  shift, and go to state 40
    EQ      shift, and go to state 41
    NEQ     shift, and go to state 42
    LT      shift, and go to state 43
    LE      shift, and go to state 44
    GT      shift, and go to state 45
    GE      shift, and go to state 46
    AND     shift, and go to state 47
    OR      shift, and go to state 48
    THEN    shift, and go to state 61


State 24

    7 exp: WHILE exp . DO exp
   16    | exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . EQ exp
   21    | exp . NEQ exp
   22    | exp . LT exp
   23    | exp . GT exp
   24    | exp . LE exp
   25    | exp . GE exp
   26    | exp . AND exp
   27    | exp . OR exp

    PLUS    shift, and go to state 37
    MINUS   shift, and go to state 38
    TIMES   shift, and go to state 39
    DIVIDE  shift, and go to state 40
    EQ      shift, and go to state 41
    NEQ     shift, and go to state 42
    LT      shift, and go to state 43
    LE      shift, and go to state 44
    GT      shift, and go to state 45
    GE      shift, and go to state 46
    AND     shift, and go to state 47
    OR      shift, and go to state 48
    DO      shift, and go to state 62


State 25

    8 exp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 63


State 26

   53 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   54       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 64


State 27

   51 vardec: VAR . ID ASSIGN exp
   52       | VAR . ID COLON ty ASSIGN exp

    ID  shift, and go to state 65


State 28

   48 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 66


State 29

   49 tydecs: tydec .
   50       | tydec . tydecs

    TYPE  shift, and go to state 28

    TYPE      [reduce using rule 49 (tydecs)]
    $default  reduce using rule 49 (tydecs)

    tydec   go to state 29
    tydecs  go to state 67


State 30

   57 dec: tydecs .

    $default  reduce using rule 57 (dec)


State 31

   58 dec: vardec .

    $default  reduce using rule 58 (dec)


State 32

   55 fundecs: fundec .
   56        | fundec . fundecs

    FUNCTION  shift, and go to state 26

    FUNCTION  [reduce using rule 55 (fundecs)]
    $default  reduce using rule 55 (fundecs)

    fundec   go to state 32
    fundecs  go to state 68


State 33

   59 dec: fundecs .

    $default  reduce using rule 59 (dec)


State 34

   60 decs: dec .
   61     | dec . decs

    FUNCTION  shift, and go to state 26
    VAR       shift, and go to state 27
    TYPE      shift, and go to state 28

    $default  reduce using rule 60 (decs)

    tydec    go to state 29
    tydecs   go to state 30
    vardec   go to state 31
    fundec   go to state 32
    fundecs  go to state 33
    dec      go to state 34
    decs     go to state 69


State 35

    3 exp: LET decs . IN seqexp END

    IN  shift, and go to state 70


State 36

    0 $accept: program $end .

    $default  accept


State 37

   16 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 71
    lvalue  go to state 14


State 38

   17 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 72
    lvalue  go to state 14


State 39

   18 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 73
    lvalue  go to state 14


State 40

   19 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 74
    lvalue  go to state 14


State 41

   20 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 75
    lvalue  go to state 14


State 42

   21 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 76
    lvalue  go to state 14


State 43

   22 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 77
    lvalue  go to state 14


State 44

   24 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 78
    lvalue  go to state 14


State 45

   23 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 79
    lvalue  go to state 14


State 46

   25 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 80
    lvalue  go to state 14


State 47

   26 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 81
    lvalue  go to state 14


State 48

   27 exp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 82
    lvalue  go to state 14


State 49

   65 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 83
    lvalue  go to state 14


State 50

   64 lvalue: lvalue DOT . ID

    ID  shift, and go to state 84


State 51

    4 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp     go to state 85
    lvalue  go to state 14


State 52

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . EQ exp
   21    | exp . NEQ exp
   22    | exp . LT exp
   23    | exp . GT exp
   24    | exp . LE exp
   25    | exp . GE exp
   26    | exp . AND exp
   27    | exp . OR exp
   38 args: exp .
   39     | exp . COMMA args

    COMMA   shift, and go to state 86
    PLUS    shift, and go to state 37
    MINUS   shift, and go to state 38
    TIMES   shift, and go to state 39
    DIVIDE  shift, and go to state 40
    EQ      shift, and go to state 41
    NEQ     shift, and go to state 42
    LT      shift, and go to state 43
    LE      shift, and go to state 44
    GT      shift, and go to state 45
    GE      shift, and go to state 46
    AND     shift, and go to state 47
    OR      shift, and go to state 48

    $default  reduce using rule 38 (args)


State 53

   15 exp: ID LPAREN args . RPAREN

    RPAREN  shift, and go to state 87


State 54

   16 exp: exp . PLUS exp
   17    | exp . MINUS exp
   18    | exp . TIMES exp
   19    | exp . DIVIDE exp
   20    | exp . EQ exp
   21    | exp . NEQ exp
   22    | exp . LT exp
   23    | exp . GT exp
   24    | exp . LE exp
   25    | exp . GE exp
   26    | exp . AND exp
   27    | exp . OR exp
   29    | ID LBRACK exp . RBRACK OF exp

    RBRACK  shift, and go to state 88
    PLUS    shift, and go to state 37
    MINUS   shift, and go to state 38
    TIMES   shift, and go to state 39
    DIVIDE  shift, and go to state 40
    EQ      shift, and go to state 41
    NEQ     shift, and go to state 42
    LT      shift, and go to state 43
    LE      shift, and go to state 44
    GT      shift, and go to state 45
    GE      shift, and go to state 46
    AND     shift, and go to state 47
    OR      shift, and go to state 48


State 55

   34 recorditem: ID . EQ exp

    EQ  shift, and go to state 89


State 56

   35 recorditems: recorditem .
   36            | recorditem . COMMA recorditems

    COMMA  shift, and go to state 90

    $default  reduce using rule 35 (recorditems)


State 57

   28 exp: ID LBRACE recorditems . RBRACE

    RBRACE  shift, and go to state 91


State 58

   63 lvalue: ID DOT ID .

    $default  reduce using rule 63 (lvalue)


State 59

   31 exps: exp SEMICOLON . exps
